<resources>
    <string name="app_name">iBook</string>

    <string name="nameText">Title</string>
    <string name="authorText">Author</string>
    <string name="dateText">Date</string>
    <string name="descriptionText">Description</string>
    <string name="photoText">Photo</string>
    <string name="isbnText">ISBN</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>


    <string name="title_home">Home</string>
    <string name="title_user">User</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_booklist">Book List</string>
    <string name="title_topic">Topic</string>
    <string name="header_notifications">Notifications</string>
    <string name="accept_button">Accept</string>
    <string name="decline_button">Decline</string>
    <string name="header_searchResults">headerSearchResults</string>
    <string name="searchResults">Search Results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>