<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ScrollViewCount"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/nameText"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/nameText" />

            <TextView
                android:id="@+id/ViewBookName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/authorText"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/authorText" />

            <TextView
                android:id="@+id/ViewAuthor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/dateText"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/dateText" />

            <TextView
                android:id="@+id/ViewDate"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/descriptionText"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/descriptionText"
                android:layout_marginLeft="16dp" />

            <TextView
                android:id="@+id/ViewDescription"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/photoText"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/photoText"
                 />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginLeft="40dp"
                android:scaleType="center"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:onClick="changeBookPhoto"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/textView5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/isbnText"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:text="@string/isbnText"
                 />

            <TextView
                android:id="@+id/ViewISBN"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/btn_delete_book"
                android:background="@drawable/selector_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="delete_book"
                android:text="delete"
                android:textColor="#FFF">

            </Button>


            <Button
                android:id="@+id/btn_edit_book"
                android:background="@drawable/selector_orange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:clickable="true"
                android:onClick="edit_book"
                android:text="edit"
                android:textColor="#FFF"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>


